Update Job, Job Report and Job creation UI